# lux_app

./: .gitignore  CLAUDE.md  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
cards/: admin.py  models.py
cards/management/commands/: import_cards.py  load_sample_data.py
cards/migrations/: 0001_initial.py  0002_enforce_card_difficulty_constraints.py  0003_allow_phrase_all_difficulties.py
data/: sproochentest_phrases.csv  sproochentest_vocabulary.csv
learning/: urls.py  views.py
learning/services/: __init__.py  answer_checker.py  card_selector.py  option_generator.py  progress_updater.py  spaced_repetition.py
learnlux/: asgi.py  urls.py  wsgi.py
learnlux/settings/: __init__.py  base.py  development.py  production.py
planning/: app_plan.md  difficulty_based_learning_flow.md
progress/: admin.py  models.py  urls.py  views.py
progress/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: login.html  profile.html  register.html
templates/accounts/password_reset/: password_reset.html  password_reset_complete.html  (+4 more)
templates/components/: footer.html  messages.html  navbar.html
templates/learning/: dashboard.html  study.html  topic_detail.html  topics.html
templates/progress/: history.html  statistics.html  topic_progress.html
tests/: conftest.py
tests/e2e/: test_auth_flow.py
tests/integration/: test_views.py
tests/unit/: test_models.py  test_option_generator.py  test_services.py
